--- a/wireframe/index.html
+++ b/wireframe/index.html
@@ -64,9 +64,9 @@
         <a href="#biblioteca">Biblioteca</a>
         <a href="#atendimentos">Atendimentos</a>
         <select name="" id="">
-            <option value="">professor 1</option>
-            <option value="">professor 2</option>
-            <option value="">professor 3</option>
+            <option value="">Márcio Torres</option>
+            <option value="">Débora Bastos</option>
+            <option value="">Lucía Alda</option>
         </select>
     </aside>
 </body>
